--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
     <a href="https://profcase.github.io/js-colors/">Demo</a>
     &#9670;
     <a href="https://github.com/profcase/js-colors">Source</a>
+    
+    <button id="myBtn">click</button>
+    <script>
+      document.getElementById("myBtn").addEventListener("click", function() {
+        alert("Hello!");
+      });
+      </script>
   </footer>
 
   <script src="main.js"></script>
